<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        android:paddingHorizontal="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/screenshot_preview_pick_highlight_color"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_marginEnd="4dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/feedback_highlight"
                android:padding="3dp"
                android:src="@drawable/feedback_highlight_shape" />

            <ImageButton
                android:id="@+id/screenshot_preview_pick_hide_color"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?selectableItemBackground"
                android:contentDescription="@string/feedback_hide"
                android:padding="3dp"
                android:src="@drawable/feedback_hide_shape" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/screenshot_preview_undo"
            android:layout_width="?android:attr/actionBarSize"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/feedback_undo"
            android:src="@drawable/feedback_ic_baseline_undo_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/screenshot_preview_save"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/feedback_save"
                android:src="@drawable/feedback_ic_baseline_check_24" />

            <ImageButton
                android:id="@+id/screenshot_preview_close"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="?android:attr/actionBarSize"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/feedback_close"
                android:src="@drawable/feedback_ic_baseline_close_24" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/screenshot_preview_image_view_updated"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <me.panavtec.drawableview.DrawableView
            android:id="@+id/screenshot_preview_image_drawable_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/screenshot_preview_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:contentDescription="@string/feedback_screenshot_preview" />
    </RelativeLayout>
</LinearLayout>